feat: Add reflexion for Diego Patzan

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -2,6 +2,6 @@
 dialect  = "postgresql"        # Indica el driver
 host     = "localhost"         # O la IP de tu servidor
 port     = "5432"              # Puerto por defecto
-database = "plataforma_cursos" # Nombre de tu BD
+database = "proyecto03" # Nombre de tu BD
 username = "postgres"          # Usuario
-password = "TuContraseña"      # Contraseña
+password = "password"      # Contraseña
