feat: Add example for conexion to DB

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,7 +1,7 @@
 [connections.postgresql]
-dialect  = "postgresql"        # Indica el driver
-host     = "localhost"         # O la IP de tu servidor
-port     = "5432"              # Puerto por defecto
-database = "proyecto03" # Nombre de tu BD
-username = "postgres"          # Usuario
-password = "password"      # Contraseña
+dialect  = "postgresql"
+host     = "TU_HOST"        # e.g. localhost
+port     = "5432"
+database = "TU_BASE_DATOS"  # e.g. Proyecto3
+username = "TU_USUARIO"     # e.g. postgres
+password = "TU_CONTRASEÑA"  # Tu contraseña de conexión de PgAdmin
